tests/ui/wf/wf-complex-assoc-type.stderr
error[E0277]: the trait bound `bool: MyTrait` is not satisfied
  --> $DIR/wf-complex-assoc-type.rs:9:28
   |
LL |     type MyItem = Option<((AssertMyTrait<bool>, u8))>;
   |                            ^^^^^^^^^^^^^^^^^^^ the trait `MyTrait` is not implemented for `bool`
   |
help: this trait has no implementations, consider adding one
  --> $DIR/wf-complex-assoc-type.rs:1:1
   |
LL | trait MyTrait {}
   | ^^^^^^^^^^^^^
note: required by a bound in `AssertMyTrait`
  --> $DIR/wf-complex-assoc-type.rs:2:25
   |
LL | struct AssertMyTrait<T: MyTrait>(T);
   |                         ^^^^^^^ required by this bound in `AssertMyTrait`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
